--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block content %}
+<h1>{{ title }}</h1>
+  <p>
+    {{ form.hidden_tag() }}
+    {{ form.name.label() }}
+    {{ form.name() }}
+  </p>
+  <p>
+    {{ form.password.label() }}
+    {{ form.password() }}
+  </p>
+  <p>
+    {{ form.submit() }}
+  </p>
+    <div>
+        <a href="{{ url_for('regist') }}">Зарегистрироваться</a>
+    </div>
+{% endblock content %}
+
