--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -1,21 +1,43 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}{{ title }}{% endblock title %}</title>
+</head>
+    <h1>{{ title }}</h1>
+  {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+  {% endwith %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-  <p>
-    {{ form.hidden_tag() }}
-    {{ form.name.label() }}
-    {{ form.name() }}
-  </p>
-  <p>
-    {{ form.password.label() }}
-    {{ form.password() }}
-  </p>
-  <p>
-    {{ form.submit() }}
-  </p>
-    <div>
-        <a href="{{ url_for('regist') }}">Зарегистрироваться</a>
-    </div>
-{% endblock content %}
 
+    <form action="" method="post"  novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.username.label }}<br>
+            {{ form.username(size=32) }}<br>
+            {% for error in form.username.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(size=32) }}<br>
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+        <p>{{ form.submit() }}</p>
+    </form>
+        <a href="{{ url_for('registration') }}">Регистрация</a>
+ {% endblock %}
+<body>
+</body>
+</html>
