--- a/server/app/templates/main.html
+++ b/server/app/templates/main.html
@@ -2,8 +2,11 @@
 
 {% block content %}
 
+{% if current_user.is_anonymous %}
+    <a href="{{ url_for('login') }}">Вход</a>
+    {% endif %}
 {% for ing in rec %}
 <div><p>{{ing}}</p></div>
-{% endfor %}}
+{% endfor %}
 
 {% endblock content %}
