--- a/server/app/templates/user.html
+++ b/server/app/templates/user.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 <p>
-    Имя пользователя: {{name}}
+<h3>Имя пользователя: {{ current_user.name }}</h3>
 </p>
+<form action="" method="post">
 <p>
     {{ form.hidden_tag() }}
     {{ form.curr_pass.label() }}
@@ -14,10 +15,10 @@
     {{ form.new_pass() }}
   </p>
   <p>
-    {{ form.repeat_pass.label() }}
-    {{ form.repeat_pass() }}
+    {{ form.password_repeat.label() }}
+    {{ form.password_repeat() }}
   </p>
   <p>
     {{ form.submit() }}
-  </p>
+  </p></form>
 {% endblock content %}
